# gt

./: .editorconfig  .gitignore  .shellcheckrc  .shellspec  AGENTS.md  Cargo.toml  LICENSE  README.md  TASK.md  TODO.md  install-rust.sh  install.doc.sh  install.doc.sh.sig  install.sh  install.sh.sig  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.gget/remotes/tegonal-gh-commons/: pull-hook.sh  pulled.tsv
.gget/remotes/tegonal-scripts/: pulled  pulled.tsv
.gget/remotes/tegonal-scripts/public-keys/: signing-key.public.asc  tegonal.public.asc
.gget/tegonal-scripts/: gitconfig  pulled.txt
.gget/tegonal-scripts/public-keys/: signing-key.public.asc
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contributor Agreement.txt  Contributor Agreements v1.0.txt  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.md
.github/workflows/: cleanup.yml  code-quality.yml  gget-update.yml  gget-update.yml.sig  gt-update.yml  gt-update.yml.sig  installation.yml  quality-assurance.yml
.gt/remotes/tegonal-gh-commons/: pull-hook.sh  pulled.tsv
.gt/remotes/tegonal-scripts/: pull.args  pulled.tsv
gt-remote/: Cargo.toml
gt-remote/src/: args.rs  config.rs  error.rs  git.rs  gpg.rs  lib.rs  main.rs  paths.rs
gt-remote/src/commands/: add.rs  list.rs  remove.rs
gt-remote/src/remote/: add.rs  list.rs  remove.rs
lib/tegonal-gh-commons/src/gt/: pull-hook-functions.sh  (+1 more)
lib/tegonal-scripts/src/: setup.sh  setup_tegonal_scripts.sh
rust/: Cargo.toml  README.md
rust/src/: args.rs  ask.rs  constants.rs  error.rs  git.rs  gpg.rs  lib.rs  log.rs  main.rs  paths.rs  pulled.rs  util.rs
rust/src/commands/: mod.rs  pull.rs  remote.rs  self_update.rs
rust/tests/: cli.rs
scripts/: a.sh  additional-prepare-files-next-dev-cycle-steps.sh  additional-release-files-preparations.sh  before-pr.sh  cleanup-on-push-to-main.sh  compare-bash-rust.sh  dirs.source.sh  initial-setup.sh  prepare-next-dev-cycle.sh  release.sh  run-shellcheck.sh  run-shfmt.sh  shared-files-to-release.source.sh  update-docu.sh  update-version-in-non-sh-files.sh
spec/: 01-concepts-and-data-model.md  02-cli-and-argument-parsing.md  03-gpg-trust-model.md  04-command-remote.md  05-command-pull.md  06-command-re-pull.md  07-command-reset.md  08-command-update.md  09-command-self-update.md  10-pull-hooks-and-placeholders.md  11-installation.md  12-ci-integration.md  13-pulled-tsv-migrations.md  14-dependencies-and-environment.md  README.md  internal-utilities.md  overview.md  pull.md  re-pull.md  remote.md  reset.md  self-update.md  smoke_spec.sh  spec_helper.sh  update.md  working_directory_spec.sh
src/: common-constants.source.sh  common-constants.source.sh.sig  directories.source.sh  dirsSrc.source.sh  gget-pull.doc.sh  gget-pull.sh  gget-pull.sh.sig  gget-re-pull.doc.sh  gget-re-pull.sh  gget-re-pull.sh.sig  gget-remote.doc.sh  gget-remote.sh  gget-remote.sh.sig  gget-reset.doc.sh  gget-reset.sh  gget-reset.sh.sig  gget-self-update.doc.sh  gget-self-update.sh  gget-self-update.sh.sig  gget-update.doc.sh  gget-update.sh  gget-update.sh.sig  gget.doc.sh  gget.sh  gget.sh.sig  gpg-utils.sh  gt-pull.doc.sh  gt-pull.sh  gt-pull.sh.sig  gt-re-pull.doc.sh  gt-re-pull.sh  gt-re-pull.sh.sig  gt-remote.doc.sh  gt-remote.sh  gt-remote.sh.sig  gt-reset.doc.sh  gt-reset.sh  gt-reset.sh.sig  gt-self-update.doc.sh  gt-self-update.sh  (+18 more)
src/commands/: common_args.rs  mod.rs  pull.rs  remote.rs  repull.rs  reset.rs  self_update.rs  update.rs
src/commands/remote/: add.rs  list.rs  remove.rs
src/gitlab/: .gitlab-ci.yml  .gitlab-ci.yml.sig  create-mr.sh  create-mr.sh.sig  install-gget.sh  install-gget.sh.sig  install-gt.sh  install-gt.sh.sig  utils.sh  utils.sh.sig
src/install/: include-install-doc.doc.sh  include-install-doc.sh  include-install-doc.sh.sig
src/install/zsh/: _gt  _gt.sig
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs
xtask/src/commands/: cleanup.rs  clear_cache.rs  coverage.rs  helpers.rs  mod.rs  taplo.rs
(+48 files in other folders)
