[package]
name = "gt"
description = "Rust re-implementation of the gt tool (currently the 'remote' command)"

version.workspace = true
rust-version.workspace = true
edition.workspace = true

# Intentionally no external dependencies: the implementation only relies on the
# standard library plus the `git` and `gpg` command line tools (exactly like the
# original Bash implementation). This keeps the build hermetic and reproducible.
[dependencies]

